from monday sumath

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="date_time">Select Date : </string>
     <string name="time_slot">Pick one time slot :</string>
     <string name="appointment_details">Appointment Details</string>
+    <string name="token">B3Yhavq16yxYIDDVYT4hyS20Y597dsDa</string>
 </resources>
