--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="first">First Name :</string>
     <string name="last">Last Name :</string>
     <string name="password">Password :</string>
-    <string name="conf_password">Confirm Password : </string>
+    <string name="conf_password">Confirm Password</string>
     <string name="createAccount">Create Account</string>
     <string name="submit">Book Appointment</string>
     <string name="registeration">User Register : </string>
@@ -38,7 +38,11 @@
     <string name="date_time">Select Date : </string>
     <string name="time_slot">Pick one time slot :</string>
     <string name="appointment_details">Appointment Details</string>
+
+
+    <string name="org_id">1</string>
     <string name="token">B3Yhavq16yxYIDDVYT4hyS20Y597dsDa</string>
+    <string name="noConn">No Conncetion</string>
     <string name="error">Error</string>
     <string name="title">Title</string>
     <string name="dob">dob(mm/dd/yyyy)</string>
