--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="title">Title</string>
     <string name="dob">dob(mm/dd/yyyy)</string>
     <string name="signUp">Sign Up</string>
+    <string name="time_Zone">Select TimeZone : </string>
 </resources>
