--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,23 +2,25 @@
     <string name="app_name">Reservopia</string>
     <string name="histroy">History</string>
     <string name="upcomingAppointment">Upcoming Appointment</string>
-    <string name="select_service_type">Select Location :</string>
+    <string name="select_location">Location </string>
     <string name="about">About</string>
     <string name="booking_app">Book Appointment</string>
     <string name="contact_us">Contact Us</string>
-    <string name="aboutUs">EffOne is a global IT consulting services company with experience that spans over two decades. We have presence in over 20 cities in the USA and India and our customers come from 4 </string>
+    <string name="aboutUs">User can book online appointment by choosing location, Service, time slot and date as per their convenience and availability. It’s completely free and doesn’t require any set up.</string>
     <string name="scheduling">ScheduleAppointment</string>
-    <string name="email">Email :</string>
-    <string name="phone">Phone :</string>
+    <string name="email">Email              </string>
+
+    <string name="phone">Phone </string>
     <string name="radio_male">Male</string>
     <string name="radio_female">Female</string>
-    <string name="first">First Name :</string>
-    <string name="last">Last Name :</string>
-    <string name="password">Password :</string>
-    <string name="conf_password">Confirm Password : </string>
+    <string name="first">First Name </string>
+    <string name="last">Last Name </string>
+    <string name="password">Password</string>
+    <string name="conf_password">Re Password </string>
     <string name="createAccount">Create Account</string>
     <string name="submit">Book Appointment</string>
     <string name="registeration">User Register : </string>
+    <string name="register">Registration</string>
     <string name="available_service">Available Service</string>
     <string name="appointment">appointment</string>
     <string name="city">City</string>
@@ -28,7 +30,7 @@
     <string name="appointment_confirmation">Appointment Confirmation</string>
     <string name="name">Name</string>
     <string name="service">Service</string>
-    <string name="select_service">Select Service</string>
+    <string name="select_service">Service </string>
     <string name="date">Date</string>
     <string name="address_coloumn">Address</string>
     <string name="phone_column">Phone</string>
@@ -36,7 +38,7 @@
     <string name="confirmation_details">Confirmation Details </string>
     <string name="appointment_history">Appointment History</string>
     <string name="service_type">Service Type</string>
-    <string name="date_time">Select Date : </string>
+    <string name="date_time">Date  </string>
     <string name="time_slot">Pick one time slot :</string>
     <string name="appointment_details">Appointment Details</string>
 
@@ -46,25 +48,52 @@
     <string name="noConn">No Conncetion</string>
     <string name="error">Error</string>
     <string name="title">Title</string>
-    <string name="dob">dob(mm/dd/yyyy)</string>
+    <string name="dob">Date Of Birth</string>
     <string name="signUp">Sign Up</string>
-    <string name="time_Zone">Select TimeZone : </string>
+    <string name="time_Zone">Time Zone  </string>
     <string name="getDetails">Get Details</string>
 
 
-
     <string name="ConfirmNewPasword">Confirm New Password</string>
-<string name="match_does_not"> does not match</string>
-<string name="passwordmymsg">must be contain min 8 and upto 15 chars.</string>
-    <string name="firstnamemsg">FirstName: must be present</string>
-    <string name="lastnamemsg"> LastName: must be present</string>
-    <string name="DateofBirthmsg">DateofBirth: must be present</string>
+    <string name="match_does_not"> does not match</string>
+    <string name="passwordmymsg">must be contain min 8 and upto 15 chars.</string>
+    <string name="firstnamemsg">First Name: must be present</string>
+    <string name="lastnamemsg"> LastN ame: must be present</string>
+    <string name="DateofBirthmsg">Date of Birth: must be present</string>
     <string name="Phonemsg">Phone: must be 10 digit</string>
     <string name="Emailmsg">Email: enter valid email</string>
     <string name="passwordmsg">Password: must contain min 8 and upto 15 chars</string>
-    <string name="passwordmsg2">ConfirmPassword: must contain min 8 and upto 15 chars</string>
+    <string name="passwordmsg2">Re Password: must contain min 8 and upto 15 chars</string>
     <string name="password_select">Enter valid email/password</string>
     <string name="conformmsg">ConfirmPassword: must be present</string>
     <string name="headercreateaccount">Please Validate</string>
-    <string name="passworddoednotmatch">Password and Confirm password mismatch</string>
+    <string name="passworddoednotmatch">Password and Re password mismatch</string>
+    <string name="firstname">enter first name</string>
+    <string name="lastname">enter last name</string>
+    <string name="dateofbirth">mm/dd/yyyy</string>
+    <string name="phone1">enter phone</string>
+    <string name="address1">enter address</string>
+
+    <string name="email1">enter email</string>
+    <string name="paswordlogin">enter password</string >
+    <string name="enter_confirm">enter re-password</string>
+    <string name="enter_phone">enter phone number</string>
+    <string name="enter_last">enter last name</string>
+    <string name="enter_first">enter first name</string>
+    <string name="dob_date">mm/dd/yyyy</string>
+
+
+
+
+    <string name="login_information">Login information : </string>
+    <string name="personal_information">Personal details :</string>
+    <string name="select_time_slot">Select one time slot</string>
+    <string name="options">Select appointment options :</string>
+    <string name="status">Status</string>
+    <string name="location_details">Location Details</string>
+    <string name="orginzatrion">Organization</string>
+    <string name="locName">LocName</string>
+    <string name="Booked">Booked</string>
+    <string name="confirmation">Confirmation</string>
+
 </resources>
