addded login api

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,5 +103,10 @@
     <string name="forgot">forgot password</string>
     <string name="signup">Sign Up</string>
     <string name="cancel">Cancel</string>
+    <string name="edit_appointment">Edit appointment</string>
+    <string name="allocated">This time slot already allocated.</string>
+    <string name="histroy_noEmail">No email exists</string>
+    <string name="history_found">No History details found</string>
+    <string name="something_went_wrong">Something went wrong</string>
 
 </resources>
