--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,10 @@
     <string name="aboutUs">User can book online appointment by choosing location, Service, time slot and date as per their convenience and availability. It’s completely free and doesn’t require any set up.</string>
     <string name="scheduling">ScheduleAppointment</string>
     <string name="email">Email              </string>
-
+    <string name="internet_connection">"You need a network connection to use this application. Please turn on mobile network or Wi-Fi in Settings.</string>
+    <string name="titleMsg">Unable to connect</string>
+    <string name="settings">Settings</string>
+    <string name="button">Cancel</string>
     <string name="phone">Phone </string>
     <string name="radio_male">Male</string>
     <string name="radio_female">Female</string>
@@ -121,5 +124,6 @@
     <string name="reset_pass">Reset Password</string>
     <string name="fromLogin">fromlogin</string>
     <string name="isFromHomeScreen">isFromHomeScreen</string>
+    <string name="select_provider">Provider</string>
 
 </resources>
