--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,9 +19,11 @@
     <string name="first">First name </string>
     <string name="last">Last name </string>
     <string name="password">Password</string>
-    <string name="conf_password">Re Password </string>
+    <string name="conf_password">Re Password</string>
+    <string name="email_password">Provisional password</string>
     <string name="createAccount">Create Account</string>
     <string name="submit">Book Appointment</string>
+    <string name="submit_btn">Submit</string>
     <string name="registeration">User Register : </string>
     <string name="register">Registration</string>
     <string name="available_service">Available Service</string>
@@ -82,14 +84,13 @@
     <string name="address1">enter address</string>
 
     <string name="email1">enter email</string>
-    <string name="paswordlogin">enter password</string >
+    <string name="paswordlogin">enter password</string>
     <string name="enter_confirm">enter re-password</string>
+    <string name="enter_mailed_confirm">enter mailed-password</string>
     <string name="enter_phone">enter phone number</string>
     <string name="enter_last">enter last name</string>
     <string name="enter_first">enter first name</string>
     <string name="dob_date">mm/dd/yyyy</string>
-
-
 
 
     <string name="login_information">Login information : </string>
@@ -112,6 +113,7 @@
     <string name="login_samll">login</string>
     <string name="logout">Logout</string>
     <string name="reset">reset</string>
+    <string name="reset_cap">Reset</string>
     <string name="forgot"><u>Forgot password?</u></string>
     <string name="signup">Sign up</string>
     <string name="cancel">Cancel</string>
@@ -122,7 +124,9 @@
     <string name="something_went_wrong">Something went wrong</string>
     <string name="alphabets">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
     <string name="reset_pass">Reset Password</string>
+    <string name="forgot_title">Forgot Password</string>
     <string name="fromLogin">fromlogin</string>
+
     <string name="isFromHomeScreen">isFromHomeScreen</string>
     <string name="select_provider">Provider</string>
 
