--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,11 +17,11 @@
     <string name="radio_male">Male</string>
     <string name="radio_female">Female</string>
     <string name="names">Name</string>
-    <string name="first">First name </string>
-    <string name="last">Last name </string>
+    <string name="first">First Name </string>
+    <string name="last">Last Name </string>
     <string name="password">Password</string>
     <string name="conf_password">Re Password</string>
-    <string name="email_password">Old password</string>
+    <string name="email_password">Old Password</string>
     <string name="createAccount">Create Account</string>
     <string name="submit">Book Appointment</string>
     <string name="submit_btn">Submit</string>
@@ -55,7 +55,7 @@
     <string name="noConn">No Conncetion</string>
     <string name="error">Error</string>
     <string name="title">Title</string>
-    <string name="dob">Date of birth</string>
+    <string name="dob">Date Of Birth</string>
     <string name="signUp">Sign Up</string>
     <string name="time_Zone">Time zone</string>
     <string name="getDetails">Get Details</string>
@@ -66,8 +66,8 @@
     <string name="passwordmymsg">must be contain min 8 and upto 15 chars.</string>
     <string name="firstnamemsg">First name is required.</string>
     <string name="lastnamemsg"> Last name is required.</string>
-    <string name="DateofBirthmsg">Date of birth: must be present.</string>
-    <string name="Phonemsg">Phone: must be 10 digit number.</string>
+    <string name="DateofBirthmsg">Date of birth is required.</string>
+    <string name="Phonemsg">Phone no must be 10 digits number.</string>
     <string name="Emailmsg">Email: enter valid email.</string>
     <string name="login_validation">Enter valid email and password.</string>
     <string name="passwordmsg">Must contain min 6 chars and max 15 chars.</string>
@@ -126,8 +126,8 @@
     <string name="something_went_wrong">Something went wrong</string>
     <string name="alphabets">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
     <string name="reset_pass">Reset Password</string>
-    <string name="forgot_password_small">Forgot password:</string>
-    <string name="reset_pass_samll">Reset password</string>
+    <string name="forgot_password_small">Forgot password :</string>
+    <string name="reset_pass_samll">Reset password :</string>
     <string name="forgot_title">Forgot Password</string>
     <string name="fromLogin">fromlogin</string>
 
@@ -135,10 +135,22 @@
     <string name="select_provider">Provider</string>
     <string name="edit_personal_info">Edit Personal Info</string>
     <string name="reset_code">Reset Code</string>
-    <string name="new_password">New password</string>
+    <string name="new_password">New Password</string>
     <string name="enter_new_password">enter new password</string>
     <string name="enter_reset_code">enter reset code</string>
 
     <string name="emailMsg1">Invalid email</string>
     <string name="dobMsg">Please match the date format. Ex:  mm/dd/yyyy  (04/09/2002) </string>
+
+
+
+    <string name="all_field">All fields are required.</string>
+    <string name="email_error_msg">Email is required.</string>
+    <string name="phone_error_msg">Must be 10 digits number.</string>
+    <string name="password_error_msg">Must contain min 8 chars and max 15 chars..</string>
+    <string name="didnotmatch_error_msg">Doesn’t match with password.</string>
+    <string name="first_error_msg">First name is required.</string>
+    <string name="last_error_msg">Last name is required.</string>
+    <string name="resetPassword_msg"> We have sent a temporary code to your email id. Use this code to reset your password.</string>
+
 </resources>
